--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,26 +18,9 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '22'
-          cache: 'npm'
 
-      - name: Install dependencies
-        run: npm ci
+      - name: Check script syntax
+        run: node --check "阿里妈妈多合一助手.js"
 
-      - name: Check syntax
-        run: npm run check:syntax
-
-      - name: Build outputs
-        run: npm run build
-
-      - name: Package artifacts
-        run: npm run package
-
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: build-artifacts
-          path: |
-            dist/extension/chrome/**
-            dist/extension/firefox/**
-            dist/userscript/**
-            dist/packages/**
+      - name: Run logger API tests
+        run: node --test tests/logger-api.test.mjs
