--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,7 @@ permissions:
   contents: write
 
 jobs:
-  build_release:
+  release:
     runs-on: ubuntu-latest
 
     steps:
@@ -20,114 +20,52 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '22'
-          cache: 'npm'
 
-      - name: Install dependencies
-        run: npm ci
+      - name: Verify script
+        run: |
+          node --check "阿里妈妈多合一助手.js"
+          node --test tests/logger-api.test.mjs
 
-      - name: Build and package
-        run: npm run verify
+      - name: Build userscript assets
+        run: |
+          node <<'NODE'
+          const fs = require('node:fs');
+          const path = require('node:path');
 
-      - name: Upload release assets
-        uses: actions/upload-artifact@v4
-        with:
-          name: release-assets
-          path: dist/packages/*
+          const sourcePath = '阿里妈妈多合一助手.js';
+          const outDir = path.join('dist', 'packages');
+          const userAsset = path.join(outDir, 'alimama-helper-pro.user.js');
+          const metaAsset = path.join(outDir, 'alimama-helper-pro.meta.js');
+
+          const source = fs.readFileSync(sourcePath, 'utf8');
+          fs.mkdirSync(outDir, { recursive: true });
+          fs.writeFileSync(userAsset, source, 'utf8');
+
+          const headerStart = source.indexOf('// ==UserScript==');
+          const headerEnd = source.indexOf('// ==/UserScript==');
+          if (headerStart === -1 || headerEnd === -1 || headerEnd < headerStart) {
+            throw new Error('无法解析 UserScript 头部');
+          }
+
+          const endMarker = '// ==/UserScript==';
+          let meta = source.slice(headerStart, headerEnd + endMarker.length);
+          const updateUrl = 'https://github.com/huron09280/alimama-helper-pro/releases/latest/download/alimama-helper-pro.meta.js';
+          const downloadUrl = 'https://github.com/huron09280/alimama-helper-pro/releases/latest/download/alimama-helper-pro.user.js';
+
+          if (!/@updateURL\b/.test(meta)) {
+            meta = meta.replace(endMarker, `// @updateURL    ${updateUrl}\n${endMarker}`);
+          }
+          if (!/@downloadURL\b/.test(meta)) {
+            meta = meta.replace(endMarker, `// @downloadURL  ${downloadUrl}\n${endMarker}`);
+          }
+
+          if (!meta.endsWith('\n')) meta += '\n';
+          fs.writeFileSync(metaAsset, meta, 'utf8');
+          NODE
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
           files: |
-            dist/packages/alimama-helper-pro.crx
-            dist/packages/alimama-helper-pro-chrome.zip
-            dist/packages/alimama-helper-pro-edge.zip
-            dist/packages/alimama-helper-pro-firefox.xpi
             dist/packages/alimama-helper-pro.user.js
             dist/packages/alimama-helper-pro.meta.js
-
-  publish_chrome:
-    needs: build_release
-    runs-on: ubuntu-latest
-    continue-on-error: true
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '22'
-
-      - name: Download release assets
-        uses: actions/download-artifact@v4
-        with:
-          name: release-assets
-          path: dist/packages
-
-      - name: Publish to Chrome Web Store
-        env:
-          CHROME_EXTENSION_ID: ${{ secrets.CHROME_EXTENSION_ID }}
-          CHROME_CLIENT_ID: ${{ secrets.CHROME_CLIENT_ID }}
-          CHROME_CLIENT_SECRET: ${{ secrets.CHROME_CLIENT_SECRET }}
-          CHROME_REFRESH_TOKEN: ${{ secrets.CHROME_REFRESH_TOKEN }}
-          CHROME_ZIP: dist/packages/alimama-helper-pro-chrome.zip
-        run: node scripts/publish-chrome.mjs
-
-  publish_edge:
-    needs: build_release
-    runs-on: ubuntu-latest
-    continue-on-error: true
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '22'
-
-      - name: Download release assets
-        uses: actions/download-artifact@v4
-        with:
-          name: release-assets
-          path: dist/packages
-
-      - name: Publish to Microsoft Edge Add-ons
-        env:
-          EDGE_PRODUCT_ID: ${{ secrets.EDGE_PRODUCT_ID }}
-          EDGE_CLIENT_ID: ${{ secrets.EDGE_CLIENT_ID }}
-          EDGE_CLIENT_SECRET: ${{ secrets.EDGE_CLIENT_SECRET }}
-          EDGE_TENANT_ID: ${{ secrets.EDGE_TENANT_ID }}
-          EDGE_API_KEY: ${{ secrets.EDGE_API_KEY }}
-          EDGE_ZIP: dist/packages/alimama-helper-pro-edge.zip
-        run: node scripts/publish-edge.mjs
-
-  publish_firefox:
-    needs: build_release
-    runs-on: ubuntu-latest
-    continue-on-error: true
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '22'
-
-      - name: Build extension source for AMO submission
-        run: |
-          npm ci
-          npm run build
-
-      - name: Submit to Firefox Add-ons
-        env:
-          FIREFOX_EXTENSION_ID: ${{ secrets.FIREFOX_EXTENSION_ID }}
-          FIREFOX_API_KEY: ${{ secrets.FIREFOX_API_KEY }}
-          FIREFOX_API_SECRET: ${{ secrets.FIREFOX_API_SECRET }}
-          FIREFOX_SOURCE_DIR: dist/extension/firefox
-          FIREFOX_ARTIFACTS_DIR: dist/packages
-        run: node scripts/publish-firefox.mjs
