--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,8 +19,5 @@ jobs:
         with:
           node-version: '22'
 
-      - name: Check script syntax
-        run: node --check "阿里妈妈多合一助手.js"
-
-      - name: Run logger API tests
-        run: node --test tests/logger-api.test.mjs
+      - name: Run review team checks
+        run: bash scripts/review-team.sh
